# Lexis

./: .gitignore  CLAUDE.md  devenv.nix  package.json
desktop/src-tauri/: .gitignore  Cargo.toml
desktop/src-tauri/src/: lib.rs  nlp.rs
desktop/src-tauri/tests/: nlp_filtering.rs
desktop/src/routes/: +page.svelte
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: calibre.rs  epub.rs  lib.rs  nlp.rs  resources.rs
